frontend-dev/fe-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-cilist-dev
  namespace: development
  labels:
    app: fe-cilist-dev
    name: fe-cilist-dev
    keel.sh/policy: major
    keel.sh/trigger: poll  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fe-cilist-dev
  template:
    metadata:
      labels:
        app: fe-cilist-dev
    spec:
      containers:
      - name: fe-cilist-dev
        image: ramses01/cilist-frontend-dev:latest	
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-fe-cilist-dev
  namespace: development
spec:
  selector:
    app: fe-cilist-dev
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
